[tool.poetry]
name = "ABM"
version = "0.1.0"
description = ""
authors = ["dmajard <dmajard@streetbees.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Mesa = "^0.9.0"
numpy = "^1.23.0"
ipykernel = "^6.15.0"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
